# serializer version: 1
# name: test_package_crate_error_message_snapshot
  'cargo package failed for crate alpha with exit code 1: packaging failed'
# ---
# name: test_publish_crate_error_message_snapshot
  'cargo publish failed for crate alpha with exit code 1: publish failed'
# ---
